# StockProject

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROGRESS.md  README.md  start-dev.bat  start-dev.ps1  stop-dev.ps1
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: dedupe_analysis_event_links.py  import_analysis_evaluation_dataset.py  run_analysis_evaluation.py  run_analysis_worker.py  run_watchlist_worker.py  smoke_test_llm.py  sync_policy_documents.py
backend/tests/: conftest.py  test_admin_evaluation_routes.py  test_admin_jobs_routes.py  test_admin_news_routes.py  test_admin_policy_routes.py  test_admin_routes.py  test_alembic_baseline_smoke.py  test_analysis_evaluation_repository.py  test_analysis_evaluation_scripts.py  test_analysis_event_cleanup_script.py  test_analysis_event_selection_service.py  test_analysis_export_routes.py  test_analysis_job_integration.py  test_analysis_orchestrator_service.py  test_analysis_prompt_service.py  test_analysis_repository.py  test_analysis_routes.py  test_analysis_runtime_service.py  test_analysis_service.py  test_analysis_session_status_routes.py  test_analysis_sessions.py  test_auth_risk_service.py  test_auth_routes.py  test_auth_schemas.py  test_candidate_evidence_service.py  test_captcha_service.py  test_db_schema.py  test_db_session.py  test_event_link_service.py  test_factor_weight_service.py  test_job_service.py  test_key_event_extraction_service.py  test_llm_analysis_service.py  test_llm_client_service.py  test_logging.py  test_main.py  (+42 more)
(+222 files in other folders)
