[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.17.67",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "pillow>=12.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.48",
    "tushare>=1.4.24",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
